# pomodoro-cli

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: config.rs  display.rs  logger.rs  main.rs  notifier.rs  stats.rs  timer.rs  types.rs
