[package]
name = "pomodoro-cli"
version = "0.1.2"
edition = "2021"
description = "A command-line Pomodoro timer"
license = "MIT"

[[bin]]
name = "pomodoro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
